refactor(hex): tighten semantic architecture boundaries